# gtac_sqlite

./: CMakeLists.txt  Compile.bat  Configure.bat  Configure_VS2017_XP.bat  Configure_VS2017_XP_x64.bat  Configure_VS2019_XP.bat  Configure_VS2019_XP_x64.bat  Linux_x64.sh  README.md  VS2017_XP.bat  VS2017_XP_x64.bat  VS2019_XP.bat  VS2019_XP_x64.bat
Projects/: CMakeLists.txt
Projects/gtac_sqlite/: CMakeLists.txt  Main.cpp  pch.h
Projects/mod_sqlite/: CMakeLists.txt  Main.cpp  pch.h
Projects/sqlite/: CMakeLists.txt
SDK/Helper/: SDKHelper.h
SDK/include/: GalacticInterfaces.h  GalacticResult.h  GalacticStrongPtr.h  GalacticUUID.h
cmake/: j-generic.cmake
